// Copyright 2025 Google LLC All Rights Reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package allocation;
option go_package = "./allocation";

import "proto/allocation/allocation.proto";


service Processor {
  rpc StreamBatches(stream ProcessorMessage) returns (stream ProcessorMessage);
}

message ProcessorMessage {
  string client_id = 1;

  oneof payload {
    PullRequest pull = 2;
    Batch batch = 3;
    BatchResponse batch_response = 4;
  }
}

message PullRequest {
  string message = 1;
}

message Batch {
  repeated allocation.AllocationRequest requests = 1;
}

message BatchResponse {
  repeated allocation.AllocationResponse responses = 1;
  repeated string errors = 2;
}